workspace = { members = ["xtask"] }

[package]
name = "ase-project"
version = "0.1.0"
edition = "2021"
description = "Spatializer Plugin for Audio Software Engineering."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dsp = []

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
hrtf = "0.8.1"
sofar = "=0.1.6"
anyhow = "1.0"
assert_approx_eq = "1.1"
hound = "3.5"
cpal = "0.15"
criterion = "0.4"
rand = "0.8"
ringbuf = "0.3"
parking_lot = "0.12"
realfft = "3.3.0"

[[example]]
name = "renderer"


