[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["dsp"]
dsp = ["dep:realfft"]
egui_extras = ["default"]

[workspace]
members = ["libmysofa-sys"]


[dependencies]
ffi = { package = "libmysofa-sys", version = "0.1", path = "libmysofa-sys" }
realfft = {version = "3.2", optional = true}
thiserror = "1"
anyhow = "1.0"
assert_approx_eq = "1.1"
hound = "3.5"
cpal = "0.15"
criterion = "0.4"
rand = "0.8"
ringbuf = "0.3"
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = {version = "0.27.2", features = ["default", "image"]}
rfd = "0.13"

[dev-dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
hound = "3.5"
cpal = "0.15"
criterion = "0.4"
rand = "0.8"
ringbuf = "0.3"
egui_extras = "0.27.2"

[[bench]]
name = "renderer"
harness = false
required-features = ["dsp"]

[[example]]
name = "renderer"
required-features = ["dsp"]
